--- a/hack/demo/demo-config.yaml
+++ b/hack/demo/demo-config.yaml
@@ -60,11 +60,11 @@ exporters:
     endpoint: "http://loki:3100/otlp"
     tls:
       insecure: true
-  awss3/logs:
-    s3uploader:
-      region: ${AWS_REGION}
-      s3_bucket: ${S3_BUCKETNAME}
-      s3_prefix: ${S3_OBJ_DIR}
+#  awss3/logs:
+#    s3uploader:
+#      region: ${AWS_REGION}
+#      s3_bucket: ${S3_BUCKETNAME}
+#      s3_prefix: ${S3_OBJ_DIR}
 
 service:
   pipelines:
@@ -79,4 +79,4 @@ service:
     logs/analysis_pipeline:
       receivers: [ webhookevent, otlp ]
       processors: [ batch, transform/ocsf, truthbeam ]
-      exporters: [ debug, otlphttp/logs, awss3/logs ]
+      exporters: [ debug, otlphttp/logs ]
